add librarian user handler and swagger spec
